[package]
name = "saturn-kernel"
version = "0.1.0"
authors = ["Alexander Smirnov <alex.bluesman.smirnov@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
buddy_system_allocator = "0.11.0"

#[features]
#default = ["nightly"]

[profile.dev]
panic="abort"

[profile.release]
panic="abort"
