[package]
name = "saturn-kernel"
version = "0.1.0"
authors = ["Alexander Smirnov <alex.bluesman.smirnov@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
buddy_system_allocator = "0.11.0"
conquer-once = { version = "0.4.0", default-features = false }
log = "0.4.17"
spinning_top = "0.3.0"

[profile.dev]
panic="abort"

[profile.release]
panic="abort"
